# axum-realtime-kit

./: .example-env  Cargo.toml  README.md
examples/: basic_chat.rs
src/: auth.rs  coalescing.rs  lib.rs
src/ws/: handler.rs  mod.rs  service.rs  types.rs  upgrade.rs
