[package]
name = "axum-realtime-kit"
version = "0.1.0"
edition = "2024"
description = "A toolkit for building scalable, real-time applications with Axum, WebSockets, and Redis Pub/Sub."
readme = "README.md"
repository = "https://github.com/thou-sif/axum-realtime-kit"
license = "MIT/Apache-2.0"
keywords = ["axum", "websocket", "realtime", "redis", "pubsub"]
categories = ["web-programming", "asynchronous"]

[features]
default = ["auth"]

# Provides the WsAuth extractor for WebSocket authentication.
auth = []
# Provides the CoalescingService to prevent "dogpiling" on expensive operations.
coalescing = ["dep:anyhow"]

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
dashmap = "6.1.0"
futures-util = { version = "0.3.31", features = ["sink", "std"] }
redis = { version = "0.32.2", features = ["tokio-comp", "aio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["sync", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4", "serde"] }


# --- Optional Dependencies ---
anyhow = { version = "1.0.98", optional = true }
async-trait = "0.1.88"
futures = "0.3.31"

[dev-dependencies]
dotenv = "0.15.0"
once_cell = "1.21.3"
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[example]]
name = "basic_chat"
path = "examples/basic_chat.rs"
